[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "python-telegram-bot==21.5",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "supabase>=2.15.3",
    "telegram>=0.0.1",
]
